--- a/build.gradle
+++ b/build.gradle
@@ -5,9 +5,8 @@ repositories {
 }
 
 dependencies {
-//    compile 'mysql:mysql-connector-java:5.1.+'
-    // https://mvnrepository.com/artifact/mysql/mysql-connector-java
-    compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.21'
+
+    runtime group: 'mysql', name: 'mysql-connector-java', version: '5.1.21'
 
 }
 mainClassName = "net/therap/mealplanner/app/Main"
