--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,9 @@ repositories {
 dependencies {
 
     runtime group: 'mysql', name: 'mysql-connector-java', version: '5.1.21'
-
+    // https://mvnrepository.com/artifact/org.hibernate/hibernate-core
+    compile group: 'org.hibernate', name: 'hibernate-core', version: '4.3.5.Final'
+    // https://mvnrepository.com/artifact/org.slf4j/slf4j-api
+    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.5'
 }
 mainClassName = "net/therap/mealplanner/app/Main"
